Bug 136067 - GtkMenuButton preview and Label left align instead of center align
Summary: GtkMenuButton preview and Label left align instead of center align
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-24 09:24 UTC by andreas_k
Modified: 2020-08-25 07:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
color labels are center align (18.28 KB, image/png)
2020-08-24 09:24 UTC, andreas_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andreas_k 2020-08-24 09:24:48 UTC
Created attachment 164626 [details]
color labels are center align

everything in our widgets is left align only GtkMenuButton is center align.

As example you see Area and Glow sidebar. If the GtkMenuButton is also left align than it's more align AND it work better when resize the sidebar.
Comment 1 Commit Notification 2020-08-24 21:54:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3da6bd8995bcdc727936185aff62c7681a86a239

tdf#136067 left align GtkMenuButtons contents

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2020-08-24 21:55:53 UTC
that resolves it in master for me at least
Comment 3 andreas_k 2020-08-25 07:34:39 UTC
verified

thanks