tdf#136067 left align GtkMenuButtons contents

most already are, align the rest too and have
for gtk "fill" the label widget

Change-Id: I6f75c5c6ebaad0d2e3301854882aeaf3eab8580b